CMakeLists: add missing boost header include to fix:
```
make[7]: *** [CMakeFiles/jaegertracing-static.dir/build.make:79: CMakeFiles/jaegertracing-static.dir/src/jaegertracing/DynamicLoad.cpp.o] Error 1
In file included from /build/ceph-16.0.0-7207-gd76d6909/obj-x86_64-linux-gnu/external/include/thrift/transport/TTransport.h:24,
                 from /build/ceph-16.0.0-7207-gd76d6909/obj-x86_64-linux-gnu/external/include/thrift/protocol/TProtocol.h:28,
                 from /build/ceph-16.0.0-7207-gd76d6909/obj-x86_64-linux-gnu/external/include/thrift/TBase.h:24,
                 from /build/ceph-16.0.0-7207-gd76d6909/src/jaegertracing/jaeger-client-cpp/src/jaegertracing/thrift-gen/jaeger_types.h:14,
                 from /build/ceph-16.0.0-7207-gd76d6909/src/jaegertracing/jaeger-client-cpp/src/jaegertracing/ThriftSender.h:23,
                 from /build/ceph-16.0.0-7207-gd76d6909/src/jaegertracing/jaeger-client-cpp/src/jaegertracing/ThriftSender.cpp:17:
/build/ceph-16.0.0-7207-gd76d6909/obj-x86_64-linux-gnu/external/include/thrift/transport/TTransportException.h:23:10: fatal error: boost/numeric/conversion/cast.hpp: No such file or directory
   23 | #include <boost/numeric/conversion/cast.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
```

Signed-off-by: Deepika Upadhyay <dupadhya@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND
   message(FATAL_ERROR "Must use gcc >= 4.9")
 endif()
 
+find_package(Boost 1.70 REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
 hunter_add_package(thrift)
 find_package(thrift ${hunter_config} REQUIRED)
 if(HUNTER_ENABLED)
